# netlist2ss

./: LICENSE  README.md  netlist2ss.py  pyproject.toml  setup.py  sisotf.py
examples/: buck_ccm.sp  buck_dcm.sp  cap_filt.sp  simOta.sp  typeIIcompNetlist.sp
netlist2ss/: __init__.py  netlist2ss.py  sisotf.py
netlist2ss2/: .sisotf.py.swp
test/: netlist_cap.scs  netlist_cccs.scs  netlist_ccvs.scs  netlist_ind.scs  netlist_isrc.scs  netlist_res.scs  netlist_trafo.scs  netlist_vccs.scs  netlist_vcvs.scs  netlist_vsrc.scs  run_all.sh  test.py  test_cap.py  test_cccs.py  test_ccvs.py  test_ind.py  test_isrc.py  test_res.py  test_trafo.py  test_vccs.py  test_vcvs.py  test_vsrc.py
